--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
     <button class="up-butt">Sign up</button>
    </ul>
   </nav>
-  
+  <header>
+    <di class="contenaier">
+    <section class="left-sec-header">
+      <h1 class="h1">The Design Thinking superpowers</h1>
+      <p class="info-header">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
+      <button class="get-butt"><a class="text-get-butt">Get started</a></button>
+      <button class="Watch-butt-header"><img class="icon-watch-butt" src="/icon/Triangle Copy 6 (1).png" alt=""><a class="text-watch-butt">Watch the Video</a></button>
+    </section>
+    <section class="img-sect-header">
+      <img class="header-img" src="/img/Image.png" alt="">
+    </section>
+  </di>
+  </header>
 </body>
 </html>
