finishing the header section code

--- a/index.html
+++ b/index.html
@@ -11,32 +11,34 @@
   <title>Productly</title>
 </head>
 <body>
-  <nav class="nav-top">
-  <section class="sec-logo">
+  <nav class="navbar">
+   <div class="div-logo">
    <img class="icon" src="/icon/Group 31.png" alt="">
    <img class="Productly-img" src="/img/Productly.png" alt="">
-  </section>
-   <ul class="ul-top">
+   </div>
+   <ul>
     <li class="Product"><a href="#">Product</a><i>
     <li class="Customers"><a href="#">Customers</a></li>
     <li class="Pricng"><a href="#">Pricng</a></li>
     <li class="Resources"><a href="#">Resources</a></li>
+   </ul>
+   <div class="button-div">
     <button class="in-butt">Sign in</button>
     <button class="up-butt">Sign up</button>
-   </ul>
+   </div>
   </nav>
   <header>
-    <di class="contenaier">
-    <section class="left-sec-header">
+    <div class="contenaier">
+     <div class="left-sec-header">
       <h1 class="h1">The Design Thinking superpowers</h1>
       <p class="info-header">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
       <button class="get-butt"><a class="text-get-butt">Get started</a></button>
       <button class="Watch-butt-header"><img class="icon-watch-butt" src="/icon/Triangle Copy 6 (1).png" alt=""><a class="text-watch-butt">Watch the Video</a></button>
-    </section>
-    <section class="img-sect-header">
+    </div>
+    <div class="img-sect-header">
       <img class="header-img" src="/img/Image.png" alt="">
-    </section>
-  </di>
+    </div>
+  </div>
   </header>
 </body>
 </html>
