--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <li class="Resources"><a href="#">Resources</a></li>
    </ul>
    <div class="button-div">
-    <button class="in-butt">Sign in</button>
-    <button class="up-butt">Sign up</button>
+    <button class="in-button">Sign in</button>
+    <button class="up-button">Sign up</button>
    </div>
   </nav>
   <header>
@@ -32,13 +32,63 @@
      <div class="left-sec-header">
       <h1 class="h1">The Design Thinking superpowers</h1>
       <p class="info-header">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
-      <button class="get-butt"><a class="text-get-butt">Get started</a></button>
-      <button class="Watch-butt-header"><img class="icon-watch-butt" src="/icon/Triangle Copy 6 (1).png" alt=""><a class="text-watch-butt">Watch the Video</a></button>
+      <button class="get-button"><a class="text-get-button">Get started</a></button>
+      <button class="Watch-button-header"><img class="icon-watch-button" src="/icon/Triangle Copy 6 (1).png" alt=""><a class="text-watch-button">Watch the Video</a></button>
     </div>
     <div class="img-sect-header">
       <img class="header-img" src="/img/Image.png" alt="">
     </div>
   </div>
-  </header>
+</header>
+<main>
+ <section class="featuer">
+    <div class="h2">
+     <h2 class="text-h2">We design tools to unveil your superpowers</h2>
+    </div>
+  <div class="contenaier-featuer">
+    <div class="card1">
+      <img class="card__icon" src="/icon/icon.png" alt="">
+        <p class="card1__title">Five second tests</p>
+        <p class="card1__text"> Personal choices and the overall personality of the person.</p>
+    </div> 
+    <div class="card2">
+      <img class="card__icon2" src="/icon/icon (1).png" alt="">
+        <p class="card__title2">Preference tests</p>
+        <p class="card__text2">The Myspace page defines the individual.</p>  
+    </div>
+    <div class="card3">
+       <img class="card__icon3" src="/icon/icon (2).png" alt="">
+        <p class="card__title3">Design surveys</p>
+        <p class="card__text3">Sports betting, lottery and bingo playing for the fun</p>
+    </div>
+    <div class="card4">
+       <img class="card__icon4" src="/icon/icon (3).png" alt="">
+        <p class="card__title4">First click tests</p>
+        <p class="card__text4">While most people enjoy casino gambling,</p> 
+    </div>
+  </div> 
+   <button class="button-contenaier">SIGN UP NOW</button>
+</section>
+ <section class="fourth section-contenaier">
+  <div class="box-text">
+  </div>
+  <div>
+  <img class="third-img" src="/img/Image (1).png">
+  </div>
+ </section>
+   <section>3</section>
+   <section>4</section>
+
+
+
+
+
+
+
+
+
+
+  </main>
+  <footer></footer>
 </body>
 </html>
