--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <button class="up-button">Sign up</button>
    </div>
   </nav>
+   /* header section */ 
   <header>
     <div class="contenaier">
      <div class="left-sec-header">
@@ -40,7 +41,9 @@
     </div>
   </div>
 </header>
+   /* main section1 */
 <main>
+   /* feature */
  <section class="featuer">
     <div class="h2">
      <h2 class="text-h2">We design tools to unveil your superpowers</h2>
@@ -69,14 +72,58 @@
   </div> 
    <button class="button-contenaier">SIGN UP NOW</button>
 </section>
- <section class="fourth section-contenaier">
-  <div class="box-text">
+/* main section2 */
+<section class="fourth-section">
+<div class="contenaier-fourth-mine">
+  <div class="box-info">
+    <p class="Topic-title"> 
+      Effortless Validation for
+    </p>
+    <h3 class="title-h3">
+      Design Professionals
+    </h3>
+    <p class="Description-topic">
+      The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. 
+    </p>
+    <div class="div1-fourth">
+      <p class="Services1">
+        Custom Design designers
+      </p>
+      <p class="advertisement1">
+        If you are looking for a new way to promote your business that wont cost you more money, 
+      </p>
+    </div>
+    <div class="div2-fourth">
+      <p class="Services2">
+        Alterationists
+      </p>
+      <p class="advertisement2">
+        If you are looking for a new way to promote your business that wont cost you more money, 
+      </p>
+    </div>
+    <div class="div3-fourth">
+      <p class="Services3">
+        Accessory makers
+      </p>
+      <p class="advertisement3">
+        While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun
+      </p>
+    </div>
   </div>
+  <div class="div-fourth-img">
+   <img src="/img/Image (1).png" alt="">
+  </div>
+</div>
+</section>
+/* main section3 */
+<section class="main section3">
+ <section>
   <div>
-  <img class="third-img" src="/img/Image (1).png">
+    
   </div>
  </section>
-   <section>3</section>
+
+</section>
    <section>4</section>
 
 
