--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
    </div>
   </nav>
    /* header section */ 
-  <header>
+<header>
     <div class="contenaier">
      <div class="left-sec-header">
       <h1 class="h1">The Design Thinking superpowers</h1>
@@ -70,12 +70,12 @@
         <p class="card__text4">While most people enjoy casino gambling,</p> 
     </div>
   </div> 
-   <button class="button-contenaier">SIGN UP NOW</button>
-</section>
+  <button class="button-contenaier">SIGN UP NOW</button>
+ </section>
 /* main section2 */
-<section class="fourth-section">
-<div class="contenaier-fourth-mine">
-  <div class="box-info">
+ <section class="fourth-section">
+  <div class="contenaier-fourth-mine">
+   <div class="box-info">
     <p class="Topic-title"> 
       Effortless Validation for
     </p>
@@ -109,22 +109,74 @@
         While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun
       </p>
     </div>
-  </div>
-  <div class="div-fourth-img">
+   </div>
+   <div class="div-fourth-img">
    <img src="/img/Image (1).png" alt="">
-  </div>
-</div>
-</section>
-/* main section3 */
-<section class="main section3">
- <section>
-  <div>
-    
+   </div>
   </div>
  </section>
+/* main section3 */
+ <section class="main section3">
+  <div class="contenaier-section3">
+   <div class="img-div-section3">
+    <img src="/img/Image (2).png" alt="">
+   </div>
+   <div class="info-box-section3">
+    <p class="Topic-title-section3">
+      Easier decision making for
+    </p>
+    <h4 class="title-h4-section3">
+      Product Managers
+    </h4>
+    <p class="info-section3">
+      The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. 
+    </p>
+    <div class="Description-div1-section3">
+      <div class="icon1-section3">
+       <img src="/icon/Group 13.png" alt="">
+      </div>
+     <span>
+      <p class="text-description1-section3">
+        Never worry about overpaying for your energy again. 
+      </p>
+     </span> 
+    </div>
+    <div class="Description-div2-section3">
+    <div class="icon2-section3">
+     <img src="/icon/Group 13.png" alt="">
+    </div>
+    <span>
+      <p class="text-description2-section3">
+        We will only switch you to energy companies that we trust and will treat you right
+      </p>
+     </span>  
+    </div>
+    <div class="Description-div3-section3">
+    <div class="icon3-section3">
+     <img src="/icon/Group 13.png" alt="">
+    </div>
+     <span>
+      <p class="text-description3-section3">
+        We track the markets daily and know where the savings are.
+      </p>
+     </span> 
+    </div>
+   </div>
+  </div>
+  </section>
+  /* main section4 */
+  <section>
 
-</section>
-   <section>4</section>
+
+
+
+
+
+
+
+
+
+  </section>
 
 
 
@@ -135,7 +187,7 @@
 
 
 
-  </main>
-  <footer></footer>
+ </main>
+ <footer></footer>
 </body>
 </html>
