--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
         <p class="card__text4">While most people enjoy casino gambling,</p> 
     </div>
   </div> 
-  <button class="button-contenaier">SIGN UP NOW</button>
+  <div class="button-contenaier">
+    <button class="card-button">SIGN UP NOW</button>
+  </div>
  </section>
 /* main section2 */
  <section class="fourth-section">
@@ -118,10 +120,10 @@
 /* main section3 */
  <section class="main section3">
   <div class="contenaier-section3">
-   <div class="img-div-section3">
-    <img src="/img/Image (2).png" alt="">
-   </div>
-   <div class="info-box-section3">
+    <div class="img-div-section3">
+     <img src="/img/Image (2).png" alt="">
+    </div>
+    <div class="info-box-section3">
     <p class="Topic-title-section3">
       Easier decision making for
     </p>
@@ -157,7 +159,7 @@
     </div>
      <span>
       <p class="text-description3-section3">
-        We track the markets daily and know where the savings are.
+        Never worry about overpaying for your energy again.
       </p>
      </span> 
     </div>
@@ -165,29 +167,67 @@
   </div>
   </section>
   /* main section4 */
-  <section>
-
-
-
-
-
-
-
-
-
-
-  </section>
-
-
-
-
-
-
-
-
-
-
+   <div class="contenaier-section4">
+    <div class="box-first-info">
+      <p class="Topic-title-section4">
+        Optimisation for
+      </p>
+      <h5 class="title-h5-section4">
+        Marketers
+      </h5>
+      <p class="info-text-section4">
+        Few would argue that, despite the advancements of feminism
+        over the past three decades, women still face a 
+        double standard when it comes to their behavior. 
+      </p>
+    </div>
+    <div class="Description-div1-section4">
+      <p class="Services1-section4">
+        Accessory makers
+      </p>
+      <p class="advertisement1-section4">
+        While most people enjoy casino gambling, sports betting,
+        lottery and bingo playing for the fun
+      </p>
+    </div>
+    <div class="Description-div2-section4">
+      <p class="Services2-section4">
+        Alterationists
+      </p>
+      <p class="advertisement2-section4">
+        If you are looking for a new way to promote your business
+        that wont cost you more money, 
+      </p>
+    </div>
+    <div class="Description-div3-section4">
+      <p class="Services2-section4">
+        Custom Design designers
+      </p>
+      <p class="advertisement3-section4">
+        If you are looking for a new way to promote your business
+        that wont cost you more money, 
+      </p>
+    </div>
+    <div class="fourth-section4-img">
+      <img src="/img/Image (4).png" alt="">
+    </div>
+  </div>
  </main>
- <footer></footer>
+ <footer>
+  <section class="footer-contenier">
+    <div class="div-logo-footer">
+      <img class="icon-footer" src="/icon/Group 31.png" alt="">
+      <img class="icon-productly-footer" src="/img/Productly.png" alt="">
+    </div>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
+    <div>
+  </div>
+</section>
+ </footer>
 </body>
 </html>
