--- a/index.html
+++ b/index.html
@@ -11,151 +11,148 @@
   <title>Productly</title>
 </head>
 <body>
-  <nav class="navbar">
-   <div class="div-logo">
-   <img class="icon" src="/icon/Group 31.png" alt="">
-   <img class="Productly-img" src="/img/Productly.png" alt="">
-   </div>
-   <ul>
-    <li class="Product"><a href="#">Product</a><i>
-    <li class="Customers"><a href="#">Customers</a></li>
-    <li class="Pricng"><a href="#">Pricng</a></li>
-    <li class="Resources"><a href="#">Resources</a></li>
-   </ul>
-   <div class="button-div">
-    <button class="in-button">Sign in</button>
-    <button class="up-button">Sign up</button>
-   </div>
-  </nav>
-   /* header section */ 
+    <nav class="navbar">
+        <div class="div-logo">
+             <img class="icon" src="/icon/Group 31.png" alt="Colorful circle">
+             <img class="Productly-img" src="/img/Productly.png" alt="Productly">
+       </div>
+       <ul>
+            <li class="Product"><a href="#">Product</a><i>
+            <li class="Customers"><a href="#">Customers</a></li>
+            <li class="Pricng"><a href="#">Pricng</a></li>
+            <li class="Resources"><a href="#">Resources</a></li>
+       </ul>
+       <div class="button-div">
+           <button class="in-button">Sign in</button>
+           <button class="up-button">Sign up</button>
+       </div>
+   </nav>
+  <!--.header section.-->  
 <header>
-    <div class="contenaier">
-     <div class="left-sec-header">
-      <h1 class="h1">The Design Thinking superpowers</h1>
-      <p class="info-header">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
-      <button class="get-button"><a class="text-get-button">Get started</a></button>
-      <button class="Watch-button-header"><img class="icon-watch-button" src="/icon/Triangle Copy 6 (1).png" alt=""><a class="text-watch-button">Watch the Video</a></button>
-    </div>
-    <div class="img-sect-header">
-      <img class="header-img" src="/img/Image.png" alt="">
-    </div>
-  </div>
+        <div class="contenaier">
+              <div class="left-sec-header">
+                  <h1 class="h1">The Design Thinking superpowers</h1>
+                  <p class="info-header">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
+                  <button class="get-button"><a class="text-get-button">Get started</a></button>
+                  <button class="Watch-button-header"><img class="icon-watch-button" src="/icon/Triangle Copy 6 (1).png" alt=""><a class="text-watch-button">Watch the Video</a></button>
+             </div>
+             <div class="img-sect-header">
+                 <img class="header-img" src="/img/Image.png" alt="">
+             </div>
+        </div>
 </header>
-   /* main section1 */
+
 <main>
-   /* feature */
- <section class="featuer">
-    <div class="h2">
-     <h2 class="text-h2">We design tools to unveil your superpowers</h2>
-    </div>
-  <div class="contenaier-featuer">
-    <div class="card1">
-      <img class="card__icon" src="/icon/icon.png" alt="">
-        <p class="card1__title">Five second tests</p>
-        <p class="card1__text"> Personal choices and the overall personality of the person.</p>
-    </div> 
-    <div class="card2">
-      <img class="card__icon2" src="/icon/icon (1).png" alt="">
-        <p class="card__title2">Preference tests</p>
-        <p class="card__text2">The Myspace page defines the individual.</p>  
-    </div>
-    <div class="card3">
-       <img class="card__icon3" src="/icon/icon (2).png" alt="">
-        <p class="card__title3">Design surveys</p>
-        <p class="card__text3">Sports betting, lottery and bingo playing for the fun</p>
-    </div>
-    <div class="card4">
-       <img class="card__icon4" src="/icon/icon (3).png" alt="">
-        <p class="card__title4">First click tests</p>
-        <p class="card__text4">While most people enjoy casino gambling,</p> 
-    </div>
-  </div> 
-  <div class="button-contenaier">
-    <button class="card-button">SIGN UP NOW</button>
-  </div>
- </section>
-/* main section2 */
- <section class="fourth-section">
-  <div class="contenaier-fourth-mine">
-   <div class="box-info">
-    <p class="Topic-title"> 
-      Effortless Validation for
-    </p>
-    <h3 class="title-h3">
-      Design Professionals
-    </h3>
-    <p class="Description-topic">
-      The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. 
-    </p>
-    <div class="div1-fourth">
-      <p class="Services1">
-        Custom Design designers
-      </p>
-      <p class="advertisement1">
-        If you are looking for a new way to promote your business that wont cost you more money, 
-      </p>
-    </div>
-    <div class="div2-fourth">
-      <p class="Services2">
-        Alterationists
-      </p>
-      <p class="advertisement2">
-        If you are looking for a new way to promote your business that wont cost you more money, 
-      </p>
-    </div>
-    <div class="div3-fourth">
-      <p class="Services3">
-        Accessory makers
-      </p>
-      <p class="advertisement3">
-        While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun
-      </p>
-    </div>
-   </div>
-   <div class="div-fourth-img">
-   <img src="/img/Image (1).png" alt="">
-   </div>
-  </div>
- </section>
-/* main section3 */
- <section class="main section3">
-  <div class="contenaier-section3">
-    <div class="img-div-section3">
-     <img src="/img/Image (2).png" alt="">
-    </div>
-    <div class="info-box-section3">
-    <p class="Topic-title-section3">
-      Easier decision making for
-    </p>
-    <h4 class="title-h4-section3">
-      Product Managers
-    </h4>
-    <p class="info-section3">
-      The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. 
-    </p>
-    <div class="Description-div1-section3">
-      <div class="icon1-section3">
-       <img src="/icon/Group 13.png" alt="">
+   <!--.main section1.--> 
+  <section class="featuer">
+        <div class="h2">
+            <h2 class="text-h2">We design tools to unveil your superpowers</h2>
+        </div>
+     <div class="contenaier-featuer">
+         <div class="card1">
+            <img class="card__icon" src="/icon/icon.png" alt="Blue circle, hourglass">
+             <p class="card1__title">Five second tests</p>
+             <p class="card1__text"> Personal choices and the overall personality of the person.</p>
+         </div> 
+         <div class="card2">
+             <img class="card__icon2" src="/icon/icon (1).png" alt="Red circle, heart">
+             <p class="card__title2">Preference tests</p>
+             <p class="card__text2">The Myspace page defines the individual.</p>  
+         </div>
+         <div class="card3">
+             <img class="card__icon3" src="/icon/icon (2).png" alt="Yellow circle, three dots">
+             <p class="card__title3">Design surveys</p>
+             <p class="card__text3">Sports betting, lottery and bingo playing for the fun</p>
+         </div>
+         <div class="card4">
+             <img class="card__icon4" src="/icon/icon (3).png" alt="Purple circle, pointer">
+             <p class="card__title4">First click tests</p>
+             <p class="card__text4">While most people enjoy casino gambling,</p> 
+          </div> 
       </div>
-     <span>
-      <p class="text-description1-section3">
-        Never worry about overpaying for your energy again. 
-      </p>
-     </span> 
+      <div class="button-contenaier">
+        <button class="card-button">SIGN UP NOW</button>
     </div>
-    <div class="Description-div2-section3">
-    <div class="icon2-section3">
-     <img src="/icon/Group 13.png" alt="">
-    </div>
-    <span>
-      <p class="text-description2-section3">
-        We will only switch you to energy companies that we trust and will treat you right
-      </p>
-     </span>  
-    </div>
+  </section>
+<!--.main section2.--> 
+   <section class="contenaier-section2">
+        <div class="contenaier-fourth-mine">
+            <div class="left-box-info">
+                  <p class="Topic-title"> 
+                      Effortless Validation for
+                  </p>
+                  <h3 class="title-h3">
+                      Design Professionals
+                  </h3>
+                  <p class="Description-topic">
+                      The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. 
+                  </p>
+                  <div class="div1-fourth">
+                    <p class="Services1">
+                        Custom Design designers
+                    </p>
+                    <p class="advertisement1">
+                        If you are looking for a new way to promote your business that wont cost you more money, 
+                    </p>
+              </div>
+              <div class="div2-fourth">
+                    <p class="Services2">
+                        Alterationists
+                    </p>
+                    <p class="advertisement2">
+                        If you are looking for a new way to promote your business that wont cost you more money, 
+                    </p>
+              </div>
+              <div class="div3-fourth">
+                    <p class="Services3">
+                        Accessory makers
+                    </p>
+                    <p class="advertisement3">
+                        While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun
+                    </p>  
+            </div>
+          </div>
+          <div class="div-fourth-img">
+            <img src="/img/Image (1).png" alt="man with mobile">
+        </div>
+      </div>
+      
+   </section>
+<!--.main section3.--> 
+   <section class="main section3">
+         <div class="contenaier-section3">
+              <div class="img-div-section3">
+                  <img src="/img/Image (2).png" alt="man with laptop">
+               </div>
+          <div class="info-box-section3">
+                  <p class="Topic-title-section3">
+                      Easier decision making for
+                  </p>
+                  <h4 class="title-h4-section3">
+                       Product Managers
+                  </h4>
+                  <p class="info-section3">
+                      The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. 
+                 </p>
+          <div class="Description-div1-section3">
+              <div class="icon1-section3">
+                 <img src="/icon/Group 13.png" alt="Yellow circle, checkmark.">
+              </div>
+                  <p class="text-description1-section3">
+                      Never worry about overpaying for your energy again. 
+                  </p>
+           </div>
+         <div class="Description-div2-section3">
+             <div class="icon2-section3">
+                <img src="/icon/Group 13.png" alt="Yellow circle, checkmark.">
+             </div>
+                <p class="text-description2-section3">
+                   We will only switch you to energy companies that we trust and will treat you right
+                </p>  
+        </div>
     <div class="Description-div3-section3">
     <div class="icon3-section3">
-     <img src="/icon/Group 13.png" alt="">
+     <img src="/icon/Group 13.png" alt="Yellow circle, checkmark.">
     </div>
      <span>
       <p class="text-description3-section3">
@@ -166,7 +163,7 @@
    </div>
   </div>
   </section>
-  /* main section4 */
+  <!--.main section4.--> 
    <div class="contenaier-section4">
     <div class="box-first-info">
       <p class="Topic-title-section4">
@@ -209,25 +206,42 @@
       </p>
     </div>
     <div class="fourth-section4-img">
-      <img src="/img/Image (4).png" alt="">
+      <img src="/img/Image (4).png" alt="man with touch screen">
     </div>
   </div>
  </main>
+ <!--.footer.--> 
  <footer>
   <section class="footer-contenier">
     <div class="div-logo-footer">
-      <img class="icon-footer" src="/icon/Group 31.png" alt="">
-      <img class="icon-productly-footer" src="/img/Productly.png" alt="">
+      <img class="icon-footer" src="/icon/Group 31.png" alt="Colorful circle">
+      <img class="icon-productly-footer" src="/img/Productly.png" alt="Productly">
     </div>
-    <div>
-
+    <div class="input-div">
+       <form action="#">
+        <input class="input-form" name="tel" type="tel" maxlength="15"  minlength="5" placeholder="phone number">
+        <button class="input-button" type="submit">
+        Sign up Now
+        </button>
+       </form>
     </div>
-    <div>
-
+    <div class="div1-footer">
+       <ul class="footer-ul1"> 
+          <li><a>Disclaimer</a></li>
+          <li><a>Financing</a></li> 
+          <li><a>Privacy Policy</a></li>
+          <li><a>terms of service</a></li>
+       </ul>
     </div>
-    <div>
-  </div>
-</section>
+    <div class="div2-footer">
+       <ul class="footer-ul2">
+          <li><a href="#">about Us</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Contact</a></li>
+       </ul>
+    </div>
+  </sectio>
  </footer>
 </body>
 </html>
