writing the name to the alt for the images

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <nav class="navbar">
         <div class="div-logo">
-             <img class="icon" src="/icon/Group 31.png" alt="Colorful circle">
+             <img class="icon" src="/icon/Group 31.png" alt="Colorful-circle" >
              <img class="Productly-img" src="/img/Productly.png" alt="Productly">
        </div>
        <ul>
-            <li class="Product"><a href="#">Product</a><i>
+            <li class="Product"><a href="#">Product</a></li>
             <li class="Customers"><a href="#">Customers</a></li>
             <li class="Pricng"><a href="#">Pricng</a></li>
             <li class="Resources"><a href="#">Resources</a></li>
@@ -37,7 +37,7 @@
                   <button class="Watch-button-header"><img class="icon-watch-button" src="/icon/Triangle Copy 6 (1).png" alt=""><a class="text-watch-button">Watch the Video</a></button>
              </div>
              <div class="img-sect-header">
-                 <img class="header-img" src="/img/Image.png" alt="">
+                 <img class="header-img" src="/img/Image.png" alt="Two-girls-one-boy-jumping">
              </div>
         </div>
 </header>
@@ -50,22 +50,22 @@
         </div>
      <div class="contenaier-featuer">
          <div class="card1">
-            <img class="card__icon" src="/icon/icon.png" alt="Blue circle, hourglass">
+            <img class="card__icon" src="/icon/icon.png" alt="Blue-circle-hourglass">
              <p class="card1__title">Five second tests</p>
              <p class="card1__text"> Personal choices and the overall personality of the person.</p>
          </div> 
          <div class="card2">
-             <img class="card__icon2" src="/icon/icon (1).png" alt="Red circle, heart">
+             <img class="card__icon2" src="/icon/icon (1).png" alt="Red-circle-heart">
              <p class="card__title2">Preference tests</p>
              <p class="card__text2">The Myspace page defines the individual.</p>  
          </div>
          <div class="card3">
-             <img class="card__icon3" src="/icon/icon (2).png" alt="Yellow circle, three dots">
+             <img class="card__icon3" src="/icon/icon (2).png" alt="Yellow-circle-three-dots">
              <p class="card__title3">Design surveys</p>
              <p class="card__text3">Sports betting, lottery and bingo playing for the fun</p>
          </div>
          <div class="card4">
-             <img class="card__icon4" src="/icon/icon (3).png" alt="Purple circle, pointer">
+             <img class="card__icon4" src="/icon/icon (3).png" alt="Purple-circle-pointer">
              <p class="card__title4">First click tests</p>
              <p class="card__text4">While most people enjoy casino gambling,</p> 
           </div> 
@@ -113,7 +113,7 @@
             </div>
           </div>
           <div class="div-fourth-img">
-            <img src="/img/Image (1).png" alt="man with mobile">
+            <img src="/img/Image (1).png" alt="man-with-mobile">
         </div>
       </div>
       
@@ -122,7 +122,7 @@
    <section class="main section3">
          <div class="contenaier-section3">
               <div class="img-div-section3">
-                  <img src="/img/Image (2).png" alt="man with laptop">
+                  <img src="/img/Image (2).png" alt="man-with-laptop">
                </div>
           <div class="info-box-section3">
                   <p class="Topic-title-section3">
@@ -136,7 +136,7 @@
                  </p>
           <div class="Description-div1-section3">
               <div class="icon1-section3">
-                 <img src="/icon/Group 13.png" alt="Yellow circle, checkmark.">
+                 <img src="/icon/Group 13.png" alt="Yellow-circle-checkmark">
               </div>
                   <p class="text-description1-section3">
                       Never worry about overpaying for your energy again. 
@@ -144,7 +144,7 @@
            </div>
          <div class="Description-div2-section3">
              <div class="icon2-section3">
-                <img src="/icon/Group 13.png" alt="Yellow circle, checkmark.">
+                <img src="/icon/Group 13.png" alt="Yellow-circle-checkmark">
              </div>
                 <p class="text-description2-section3">
                    We will only switch you to energy companies that we trust and will treat you right
@@ -152,7 +152,7 @@
         </div>
     <div class="Description-div3-section3">
     <div class="icon3-section3">
-     <img src="/icon/Group 13.png" alt="Yellow circle, checkmark.">
+     <img src="/icon/Group 13.png" alt="Yellow-circle-checkmark">
     </div>
      <span>
       <p class="text-description3-section3">
@@ -206,7 +206,7 @@
       </p>
     </div>
     <div class="fourth-section4-img">
-      <img src="/img/Image (4).png" alt="man with touch screen">
+      <img src="/img/Image (4).png" alt="man-with-touch-screen">
     </div>
   </div>
  </main>
@@ -214,7 +214,7 @@
  <footer>
   <section class="footer-contenier">
     <div class="div-logo-footer">
-      <img class="icon-footer" src="/icon/Group 31.png" alt="Colorful circle">
+      <img class="icon-footer" src="/icon/Group 31.png" alt="Colorful-circle">
       <img class="icon-productly-footer" src="/img/Productly.png" alt="Productly">
     </div>
     <div class="input-div">
@@ -227,10 +227,10 @@
     </div>
     <div class="div1-footer">
        <ul class="footer-ul1"> 
-          <li><a>Disclaimer</a></li>
-          <li><a>Financing</a></li> 
-          <li><a>Privacy Policy</a></li>
-          <li><a>terms of service</a></li>
+          <li><a href="#">Disclaimer</a></li>
+          <li><a href="#">Financing</a></li> 
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">terms of service</a></li>
        </ul>
     </div>
     <div class="div2-footer">
@@ -241,7 +241,7 @@
           <li><a href="#">Contact</a></li>
        </ul>
     </div>
-  </sectio>
+  </section>
  </footer>
 </body>
 </html>
